--- a/src/Components/Post/post.css
+++ b/src/Components/Post/post.css
@@ -1,121 +1,117 @@
 .post {
-    width: 300px;
-    height: 400px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-    margin: 30px 0;
-    background-color: aliceblue;
-  }
-  
-  .postWrapper {
-    padding: 10px;
-  }
-  
-  .postTop {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
+  width: 90%;
+  max-width: 500px;
+  margin: 30px auto; /* Centro en la pantalla */
+  border-radius: 10px;
+  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  background-color: aliceblue;
+}
+
+.postWrapper {
+  padding: 10px;
+}
+
+.postTop {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.postTopLeft {
+  display: flex;
+  align-items: center;
+}
+
+.postProfileImg {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.postUsername {
+  font-size: 20px;
+  font-weight: 500;
+  margin: 0 10px;
+}
+
+.postBody {
+  display: flex;
+  flex-direction: column;
+}
+
+.postLeft, .postRight {
+  width: 100%; 
+  margin-right: 0; 
+}
+
+.postCenter {
+  margin: 20px 0;
+}
+
+.postText {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.postImg {
+  width: 100%;
+  max-height: 400px;
+  object-fit: contain;
+}
+
+.postRight {
+  margin-top: 20px; 
+}
+
+.postBottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.postBottomLeft {
+  display: flex;
+  align-items: center;
+}
+
+.likeIcon {
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.postLikeCounter {
+  font-size: 15px;
+}
+
+.postCommentText {
+  cursor: pointer;
+  border-bottom: 1px dashed gray;
+  font-size: 25px;
+}
+
+Button.postCommentButton {
+  color: black; 
+  font-size: 18px; 
+}
+
+.comment {
+  font-size: 15px;
+}
+
+@media screen and (max-width: 600px) {
   .postTopLeft {
-    display: flex;
-    align-items: center;
+    margin-right: 0; 
   }
-  
-  .postProfileImg {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  
-  .postUsername {
-    font-size: 20px;
-    font-weight: 500;
-    margin: 0 10px;
-  }
-  
+
   .postBody {
-    display: flex;
-    flex-direction: column;
+    flex-direction: column; 
   }
-  
+
   .postLeft, .postRight {
     width: 100%; 
     margin-right: 0; 
   }
-  
-  .postCenter {
-    margin: 20px 0;
-  }
-  
-  .postText {
-    display: block;
-    margin-bottom: 10px;
-  }
-  
-  .postImg {
-    width: 100%;
-    max-height: 400px;
-    object-fit: contain;
-  }
-  
-  .postRight {
-    margin-top: 20px; 
-  }
-  
-  .postBottom {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .postBottomLeft {
-    display: flex;
-    align-items: center;
-  }
-  
-  .likeIcon {
-    width: 24px;
-    height: 24px;
-    margin-right: 5px;
-    cursor: pointer;
-  }
-  
-  .postLikeCounter {
-    font-size: 15px;
-  }
-  
-  .postCommentText {
-    cursor: pointer;
-    border-bottom: 1px dashed gray;
-    font-size: 25px;
-  }
-  
-  Button.postCommentButton {
-    color: black; 
-    font-size: 18px; 
-  }
-  
-  .comment {
-    font-size: 15apx;
-  }
-  
-  @media screen and (max-width: 600px) {
-  
-    .postTopLeft {
-      margin-right: 0; 
-    }
-  
-    .postBody {
-      flex-direction: column; 
-    }
-  
-    .postLeft, .postRight {
-      width: 100%; 
-      margin-right: 0; 
-    }
-  
-  }
-  
-  
+}
