--- a/src/Components/Register/register.css
+++ b/src/Components/Register/register.css
@@ -1,13 +1,41 @@
-/* body {
-    background-image: url('../../../public/img/Fondo.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 0 4px 8px rgba(231, 211, 211, 0.2);
-  } */
-  
-  .boxLogin {
-    background-color: rgb(255, 255, 255);
-    padding: 40px; 
-    border-radius: 10px;
-    margin: 15px;
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.main-container {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+}
+
+.image-container {
+  background-image: url('../../../public/img/Fondo4.jpg');
+  background-size: cover;
+  background-position: center;
+  flex: 1;
+}
+
+.container-register {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
+.boxLogin {
+  background-color: rgb(255, 255, 255);
+  padding: 40px; 
+  border-radius: 10px;
+}
+
+
+@media (max-width: 768px) {
+  .image-container {
+    display: none;
   }
+
+  .main-container {
+    flex-direction: column;
+  }
+}
